--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.23",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "~19.0.7",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -27,6 +31,8 @@
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
