--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
-    "expo": "~54.0.23",
+    "expo": "~54.0.24",
     "expo-av": "~16.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
+    "expo-router": "~6.0.15",
+    "expo-secure-store": "^15.0.7",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.553.0",
